# NetPulse

./: .gitignore  README.md  project_deployment_report.txt
backend/: README.md  alert_insert.py  alert_test.py  check_arp_and_db.py  check_reachability.py  pyproject.toml  test_device_endpoints.py  test_refresh_devices.py
backend/app/: main.py
backend/app/api/: alerts.py  debug.py  devices.py  iperf.py  metrics.py  overview.py  realtime.py  speedtest.py
backend/app/core/: config.py  startup.py
backend/app/db/: models.py  session.py
backend/app/services/: alerts.py  discovery.py  monitoring.py  oui.py  realtime.py
backend/netpulse_campus_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
